--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 강사 곽동원</title>
+    <!-- 기본 메타 태그 -->
+    <meta name="description" content="AI 1타 강사 곽동원의 포트폴리오입니다. ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
+    <meta name="keywords" content="생성형 AI 교육, ChatGPT 강의, 프롬프트 엔지니어링, 챗GPT 강의, AI 전문강사">
+    <meta name="author" content="곽동원">
+
+    <!-- Open Graph 메타 태그 -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="곽동원 - AI 1타 강사 포트폴리오">
+    <meta property="og:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
+    <meta property="og:image" content="images/profile.jpg">
+    <meta property="og:url" content="https://dwkwak.github.io/aiteaching/>
+
+    <!-- Twitter 카드 메타 태그 -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="곽동원 - AI 1타 강사 포트폴리오">
+    <meta name="twitter:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
+    <meta name="twitter:image" content="images/profile.jpg">
+
+    <title>곽동원 - AI 교육 전문가 포트폴리오</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -1978,15 +1996,15 @@
             <div class="stats">
                 <div class="stat-item">
                     <span class="stat-number">95%</span>
-                    <span class="stat-label">취업성공률</span>
+                    <span class="stat-label">강의만족도</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-number">150%</span>
-                    <span class="stat-label">연간 수요증가</span>
+                    <span class="stat-number">180%</span>
+                    <span class="stat-label">업무생산성증가</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-number">1000명+</span>
-                    <span class="stat-label">수료생</span>
+                    <span class="stat-label">수강생수(25.02 기준)</span>
                 </div>
             </div>
         </div>
@@ -1995,18 +2013,18 @@
     <section id="impact" class="impact-section">
         <div class="container">
             <div class="section-header" data-aos="fade-up">
-                <span class="section-badge">Why Choose Us</span>
+                <span class="section-badge">Why Choose Me</span>
                 <h2>교육 프로그램의 차별성</h2>
             </div>
             <div class="impact-grid">
                 <div class="impact-card" data-aos="fade-up">
                     <i class="fas fa-user-graduate"></i>
                     <h3>검증된 교육 성과</h3>
-                    <p>수료생 95% 이상 취업 성공<br>평균 연봉 30% 이상 상승</p>
+                    <p>강의 만족도 95% 이상 만족<br>수료생 87% 이상 취업 성공</p>
                 </div>
                 <div class="impact-card" data-aos="fade-up" data-aos-delay="100">
                     <i class="fas fa-chalkboard-teacher"></i>
-                    <h3>실무 전문가 강사진</h3>
+                    <h3>실무 전문가 강사</h3>
                     <p>현업 AI 전문가 직강<br>1:1 맞춤형 멘토링 제공</p>
                 </div>
                 <div class="impact-card" data-aos="fade-up" data-aos-delay="200">
@@ -2028,11 +2046,11 @@
                 <div class="project-item" data-aos="fade-up">
                     <div class="project-content">
                         <span class="project-year">Basic</span>
-                        <h3>ChatGPT & Dall-e 기초</h3>
+                        <h3>ChatGPT & 프롬프트 기초</h3>
                         <div class="course-highlights">
                             <div class="highlight-item">
                                 <i class="fas fa-clock"></i>
-                                <span>8주 과정</span>
+                                <span>4주 과정</span>
                             </div>
                             <div class="highlight-item">
                                 <i class="fas fa-users"></i>
@@ -2077,7 +2095,11 @@
                         <div class="course-highlights">
                             <div class="highlight-item">
                                 <i class="fas fa-clock"></i>
-                                <span>12주 과정</span>
+                                <span>8주 과정</span>
+                            </div>
+                            <div class="highlight-item">
+                                <i class="fas fa-users"></i>
+                                <span>온라인/오프라인</span>
                             </div>
                             <div class="highlight-item">
                                 <i class="fas fa-laptop-code"></i>
@@ -2122,7 +2144,11 @@
                         <div class="course-highlights">
                             <div class="highlight-item">
                                 <i class="fas fa-clock"></i>
-                                <span>16주 과정</span>
+                                <span>12주 과정</span>
+                            </div>
+                            <div class="highlight-item">
+                                <i class="fas fa-users"></i>
+                                <span>온라인/오프라인</span>
                             </div>
                             <div class="highlight-item">
                                 <i class="fas fa-briefcase"></i>
@@ -2146,7 +2172,7 @@
                                     <i class="fas fa-project-diagram"></i>
                                     <div class="case-content">
                                         <h5>AI 솔루션 개발</h5>
-                                        <p>기업 맞춤형 AI 솔루션 설계 및 구현 실습</p>
+                                        <p>GPTs, 코딩 등 맞춤형 API 활용 솔루션 설계 및 구현 실습</p>
                                     </div>
                                 </div>
                                 <div class="case-study">
@@ -2168,7 +2194,7 @@
         <div class="container">
             <div class="section-header" data-aos="fade-up">
                 <span class="section-badge">Curriculum</span>
-                <h2>교육 커리큘럼 구성</h2>
+                <h2>커리큘럼 구성</h2>
             </div>
             <div class="skills-container">
                 <div class="skills-grid">
@@ -2179,16 +2205,16 @@
                         </div>
                         <div class="skill-list">
                             <div class="skill-item">
-                                <span>✔ AI 핵심 개념 및 원리 – AI 모델, 자연어 처리(NLP) 등 핵심 기술 이해</span>                          
-                                <div class="skill-bar" data-level="95"></div>
+                                <span>✔ AI 핵심 개념 및 원리 – AI와 머신러닝, 자연어 처리(NLP) 등 핵심 기술 이해</span>                          
+                                <div class="skill-bar" data-level="88"></div>
                             </div>
                             <div class="skill-item">
-                                <span>✔ 주요 AI 툴 비교 분석 – ChatGPT, Deepseek, Midjourney 등 최신 AI 도구의 장점과 한계</span>
-                                <div class="skill-bar" data-level="90"></div>
-                            </div>
-                            <div class="skill-item">
-                                <span>실무 적용 사례 연구 – AI를 도입한 기업의 실제 사례 분석 (마케팅, 영업, 기획, 개발 등)</span>
+                                <span>✔ 주요 AI 툴 비교 분석 – ChatGPT, Auto-GPT, Midjourney 등 최신 AI 도구의 장점과 한계</span>
                                 <div class="skill-bar" data-level="85"></div>
+                            </div>
+                            <div class="skill-item">
+                                <span>✔ 실무 적용 사례 연구 – AI를 도입한 기업의 실제 사례 분석 (마케팅, 영업, 기획, 개발 등)</span>
+                                <div class="skill-bar" data-level="82"></div>
                             </div>
                         </div>
                     </div>
@@ -2267,6 +2293,14 @@
                         </div>
                     </div>
                     <div class="award-card">
+                        <i class="fas fa-award"></i>
+                        <div class="award-content">
+                            <h3>온라인창업 강의진행</h3>
+                            <p>서울북부여성센터</p>
+                            <span class="cert-date">2024</span>
+                        </div>
+                    </div>
+                    <div class="award-card">
                         <i class="fas fa-certificate"></i>
                         <div class="award-content">
                             <h3>생성AI 활용 전문가</h3>
@@ -2297,6 +2331,14 @@
                             <h3>챗GPT활용지도사 1급</h3>
                             <p>한국지식교육협회</p>
                             <span class="cert-date">2025</span>
+                        </div>
+                    </div>
+                    <div class="award-card">
+                        <i class="fas fa-award"></i>
+                        <div class="award-content">
+                            <h3>온라인창업 강의진행</h3>
+                            <p>서울북부여성센터</p>
+                            <span class="cert-date">2024</span>
                         </div>
                     </div>
                     <div class="award-card">
