--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="곽동원 - AI 1타 강사 포트폴리오">
     <meta property="og:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
-    <meta property="og:image" content="images/profile.jpg">
+    <meta property="og:image" content="assets/images/profile.jpg">
     <meta property="og:url" content="https://dwkwak.github.io/aiteaching/>
 
     <!-- Twitter 카드 메타 태그 -->
