--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <!-- Open Graph 메타 태그 -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="곽동원 - AI 1타 강사 포트폴리오">
+    <meta property="og:title" content="김영식 - AI 교육 전문가 포트폴리오">
     <meta property="og:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
-    <meta property="og:image" content="assets/images/profile.jpg">
-    <meta property="og:url" content="https://dwkwak.github.io/aiteaching/>
+    <meta property="og:image" content="assets/images/og-image.png">
+    <meta property="og:url" content="https://yourwebsite.com">
 
     <!-- Twitter 카드 메타 태그 -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="곽동원 - AI 1타 강사 포트폴리오">
+    <meta name="twitter:title" content="김영식 - AI 교육 전문가 포트폴리오">
     <meta name="twitter:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
-    <meta name="twitter:image" content="images/profile.jpg">
+    <meta name="twitter:image" content="assets/images/og-image.png">
 
     <title>곽동원 - AI 교육 전문가 포트폴리오</title>
     <link rel="stylesheet" href="styles.css">
@@ -2423,11 +2423,11 @@
             <div class="faq-container">
                 <div class="faq-item" data-aos="fade-up">
                     <div class="faq-question">
-                        <h3>AI 관련 지식이 전혀 없어도 수강할 수 있나요?</h3>
+                        <h3>AI 관련 지식이 없어도 수강할 수 있나요?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>네, 기초부터 차근차근 배우실 수 있습니다. Basic 과정은 AI 초보자를 위해 설계되었으며, 실무에 필요한 기본 개념부터 시작합니다.</p>
+                        <p>네, 기초부터 차근차근 배우실 수 있습니다. 기본 과정은 AI 초보자를 위해 설계되었으며, 실무에 필요한 기본 개념부터 시작합니다.</p>
                     </div>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
@@ -2436,25 +2436,25 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>실시간 온라인 강의와 실습으로 진행됩니다. 매주 정해진 시간에 라이브 강의가 있으며, 1:1 멘토링과 질의응답을 통해 즉각적인 피드백을 받으실 수 있습니다.</p>
+                        <p>실시간 오프라인, 온라인 강의와 실습으로 진행됩니다. 강의 장소와 시간은 협의 가능하며, 1:1 멘토링과 질의응답을 통해 즉각적인 피드백을 받으실 수 있습니다.</p>
                     </div>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="200">
                     <div class="faq-question">
-                        <h3>수료 후 취업 지원도 해주시나요?</h3>
+                        <h3>강사는 어떤 경력이 있나요?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>네, Master 과정 수료생을 대상으로 이력서 컨설팅, 모의면접, 채용정보 제공 등 전문적인 취업 지원 서비스를 제공합니다. 또한 협력 기업과의 채용 연계도 진행하고 있습니다.</p>
+                        <p>저는 대학에서 컴퓨터 공학 전공을 전공하고, 10년 이상 온라인 마케팅 및 비즈니스 컨설팅을 해왔습니다. 기업 및 기관에서 ChatGPT와 생성형 AI를 적용해 본 실무 경험을 바탕으로 활용 가능한 실전형 교육을 제공합니다.</p>
                     </div>
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="300">
                     <div class="faq-question">
-                        <h3>교육 비용 지원이나 할부 결제가 가능한가요?</h3>
+                        <h3>강사료는 어떻게 책정되나요?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>국비 지원 과정과 민간 자격증 과정을 운영하고 있으며, 신용카드 무이자 할부 결제도 가능합니다. 자세한 사항은 상담을 통해 안내해 드립니다.</p>
+                        <p>보통 의뢰해 주신 기관마다 정해진 교육 예산이 있습니다. 강의 비용은 협의를 통해 결정하며, 자세한 사항은 상담을 통해 안내해 드립니다.</p>
                     </div>
                 </div>
             </div>
