--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <!-- Open Graph 메타 태그 -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="김영식 - AI 교육 전문가 포트폴리오">
+    <meta property="og:title" content="곽동원 - AI 1타 강사 포트폴리오">
     <meta property="og:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
-    <meta property="og:image" content="assets/images/og-image.png">
-    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:image" content="assets/images/profile.jpg">
+    <meta property="og:url" content="https://dwkwak.github.io/aiteaching/">
 
     <!-- Twitter 카드 메타 태그 -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="김영식 - AI 교육 전문가 포트폴리오">
-    <meta name="twitter:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
-    <meta name="twitter:image" content="assets/images/og-image.png">
+    <meta name="twitter:title" content="곽동원 - AI 1타 강사 포트폴리오">
+    <meta name="twitter:description" content="챗GPT와 생성형 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
+    <meta name="twitter:image" content="assets/images/profile.jpg">
 
     <title>곽동원 - AI 교육 전문가 포트폴리오</title>
     <link rel="stylesheet" href="styles.css">
@@ -2423,7 +2423,7 @@
             <div class="faq-container">
                 <div class="faq-item" data-aos="fade-up">
                     <div class="faq-question">
-                        <h3>AI 관련 지식이 없어도 수강할 수 있나요?</h3>
+                        <h3>AI 지식이 없어도 수강할 수 있나요?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
@@ -2432,7 +2432,7 @@
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="100">
                     <div class="faq-question">
-                        <h3>교육 과정은 어떤 방식으로 진행되나요?</h3>
+                        <h3>교육 과정은 어떻게 진행되나요?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
