--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="곽동원 - AI 1타 강사 포트폴리오">
     <meta property="og:description" content="ChatGPT와 AI 도구 활용 교육을 통해 기업과 개인의 디지털 혁신을 지원합니다.">
-    <meta property="og:image" content="assets/images/profile.jpg">
+    <meta property="og:image" content="https://raw.githubusercontent.com/DWKWAK/aiteaching/2b987f84698e7149d1cb1e71fb8c1489bc036151/assets/images/profile.jpg">
     <meta property="og:url" content="https://dwkwak.github.io/aiteaching/">
 
     <!-- Twitter 카드 메타 태그 -->
