--- a/index.html
+++ b/index.html
@@ -2450,11 +2450,11 @@
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="300">
                     <div class="faq-question">
-                        <h3>강사료는 어떻게 책정되나요?</h3>
+                        <h3>1:1 과외도 가능한가요?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>보통 의뢰해 주신 기관마다 정해진 교육 예산이 있습니다. 강의 비용은 협의를 통해 결정하며, 자세한 사항은 상담을 통해 안내해 드립니다.</p>
+                        <p>네, 가능합니다. 비용은 시간당 10만원이며 자세한 사항은 상담을 통해 안내해 드립니다.</p>
                     </div>
                 </div>
             </div>
@@ -2496,7 +2496,7 @@
             <div class="footer-content">
                 <div class="footer-info">
                     <p>사업자명: 카도 | 대표: 곽동원</p>
-                    <p>사업자등록번호: 123-45-67890</p>
+                    <p>사업자등록번호: 241-06-02799</p>
                     <p>주소: 서울특별시 서초구 서초동 1330</p>
                 </div>
                 <div class="footer-links">
