--- a/index.html
+++ b/index.html
@@ -2450,11 +2450,11 @@
                 </div>
                 <div class="faq-item" data-aos="fade-up" data-aos-delay="300">
                     <div class="faq-question">
-                        <h3>1:1 과외도 가능한가요?</h3>
+                        <h3>1:1 개인 과외도 가능한가요?</h3>
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>네, 가능합니다. 비용은 시간당 10만원이며 자세한 사항은 상담을 통해 안내해 드립니다.</p>
+                        <p>네, 가능합니다. 온라인으로 진행하며 비용은 시간당 10만원~입니다. 자세한 사항은 상담을 통해 안내해 드립니다.</p>
                     </div>
                 </div>
             </div>
